Bug#42340 - Error: assertion (oldestVisible->state != recLock) failed at line 143 in file RecordLeaf.cpp, RecordLeaf::pruneRecords().  The base record was committed with transaction=null, state=recDeleted and savepointId=11. The prior record was the same transactionId and state=recLock but at savepointId=0. Somehow, the savepointId 11 did not get released, so the lock records did not get scavenged. Some kind of race condition occurred to prevent the releaseSavePoint. Previously, Transaction::syncSavepoints was only used for systemTransactions.  This patch now uses that to protect all access to the Transaction::savepoints list.